# weather_service_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fetch_weather.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/endpoints/: weather.py
app/api/v1/: __init__.py  api.py
app/core/: config.py  logging.py
app/db/: __init__.py  init_db.py  session.py
app/models/: __init__.py  base.py  forecast.py  weather.py
app/schemas/: __init__.py  base.py  forecast.py  forecast_new.py  forecast_schema.py  location.py  pagination.py  weather.py  weather_models.py  weather_schema.py
app/services/: database.py  prediction.py
docker/: entrypoint.sh
init-db/: 01_init.sql
tests/: conftest.py  test_weather_services.py
weather_aggregator/: __init__.py  config.py
